minikube/standard/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoservice-svc
  namespace: dev
  labels:
    app: demoservice
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: demoservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoservice
  namespace: dev
  labels:
    app: demoservice
spec:
  replicas: 1
   selector:
    matchLabels:
      app: demoservice
  template:
    metadata:
      labels:
        app: demoservice
    spec:
      containers:
      - name: demoservice
        image: airwavetechio/demoservice:v0.0.1
        ports:
        - containerPort: 5000
          name: liveness-port
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            cpu: 10m
            memory: 25Mi
          requests:
            cpu: 10m
            memory: 25Mi
      restartPolicy: Always
