minikube/standard/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: dev
  name: demoservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: demoservice-svc
